# byte

./: .buildconfig  .travis.yml  README.md  com.github.alainm23.byte.yml  meson.build
data/: com.github.alainm23.byte.appdata.xml.in  com.github.alainm23.byte.desktop.in  com.github.alainm23.byte.gresource.xml  com.github.alainm23.byte.gschema.xml  meson.build  stylesheet.css
debian/: control
meson/: post_install.py
po/: LINGUAS  POTFILES  README.md  com.github.alainm23.byte.pot  de.po  es.po  fr.po  it.po  ja.po  nl.po  pt.po  pt_BR.po  ru.po  th_TH.po  tr.po
po/extra/: LINGUAS  de.po  es.po  extra.pot  fr.po  ja.po  nl.po  pt.po  pt_BR.po  ru.po  th_TH.po  tr.po
src/: Application.vala  MainWindow.vala  Utils.vala  meson.build
src/Dialogs/: Settings.vala
src/Objects/: Album.vala  Artist.vala  Playlist.vala  Radio.vala  RadioTrack.vala  Track.vala  TracksContainer.vala
src/Services/: CoverImport.vala  Database.vala  Indicator.vala  Lastfm.vala  Library.vala  MediaKey.vala  NavController.vala  Notification.vala  Playback.vala  Player.vala  RadioBrowser.vala  Scan.vala  Signals.vala  StreamPlayer.vala  TagManager.vala
src/Views/: Album.vala  Albums.vala  Artist.vala  Artists.vala  Favorites.vala  Home.vala  Main.vala  Music.vala  Playlist.vala  Playlists.vala  Radios.vala  Tracks.vala  Welcome.vala
src/Widgets/: ActionBar.vala  AlbumArtistChild.vala  AlbumChild.vala  AlbumImage.vala  AlbumRow.vala  AlertView.vala  ArtistChild.vala  ArtistRow.vala  BackButton.vala  Cover.vala  Files.vala  FolderRow.vala  HeaderBar.vala  MediaControl.vala  ModelButton.vala  NewPlaylist.vala  Playback.vala  PlaylistChild.vala  PlaylistRow.vala  Queue.vala  QuickFind.vala  RadioRow.vala  RadioSearchRow.vala  SecionHeaderAction.vala  SectionHeader.vala  TrackAlbumRow.vala  TrackChild.vala  TrackEditor.vala  TrackQueueRow.vala  TrackRow.vala  Welcome.vala
src/Widgets/Popovers/: Menu.vala  Sort.vala  TrackOptions.vala
